# LLM-BENCHMARKS

./: .gitignore  CLAUDE.md  LICENSE  README.md  SESSION.md  batteries.yaml  install.sh  pyproject.toml  techniques.yaml  tuning_rules.yaml  verdict_rules.yaml
.atl/: golden-rules.json  golden-rules.md  learnings.md  progress.txt  tasks.json
.atl/hooks/: post-learning-capture.sh  post-step-recalc.sh  pre-analysis-check.sh  pre-edit-check.sh  pre-spec-check.sh  stop-checklist.sh
backend/: database.py  main.py  models.py
backend/services/: machine_service.py
data/: benchmark.db  benchmark_results.db  frontier_bench_v2.db
data/runs/: prompt_d50_16384.txt
docs/benchmarks/: 2026-05-29-COMPARATIVE-REPORT.md  2026-05-29-DeepSeek-V2-Lite-REPORT.md  2026-05-29-GLOBAL-SUMMARY.md  2026-05-29-Gemma-3n-E2B-REPORT.md  2026-05-29-Gemma-4-E2B-REPORT.md  2026-05-29-Ministral-3-8B-REPORT.md  2026-05-29-Qwen2.5-7B-1M-REPORT.md  2026-05-29-Qwen2.5-7B-1M-TESTLOG.md  2026-05-29-Qwen2.5-Coder-3B-REPORT.md  2026-05-29-Qwen3-1.7B-REPORT.md  2026-05-29-Qwen3.5-2B-REPORT.md  2026-05-29-Qwen3.5-4B-REPORT.md  (+3 more)
frontend/: index.html
models/: STATUS.md
scripts/: run-benchmark.sh
specs/: 01-PROPOSAL.md  02-SPEC.md  03-DESIGN.md  04-TASKS.md  05-SPEC-MULTISLOT-BATTERY.md  README.md
tests/: test_audit_hardening.py  test_battery_presets.py  test_environment_llamabench.py  test_f3_dry.py  test_f4_rest.py  test_kv_model.py  test_maintenance_yaml.py  test_planner.py  test_quality_corpus_parser.py  test_runners_profiler.py  test_scheduler_ranking.py  test_storage_migration.py
(+71 files in other folders)
