[project]
name = "frontier-bench"
version = "2.0.0a0"
description = "FRONTIER BENCH — benchmark de búsqueda de frontera para inferencia LLM local (arquitectura hexagonal)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
